tests/paczka1/fuzzy1/82144090.err
Error in line 2: tdCgay1w A905 1,3
Error in line 10: wN0AxdRx A743 98,8
Error in line 14: csH0t A691 73,2
Error in line 24: Y4E A691 86,8
Error in line 29: tdCgay1w A7#3 221,#
Error in line 32: tdCgay1w A905 91,2
Error in line 33: Y4E A101 17,4
Error in line 35: Y4E A743 90,8
Error in line 38: ow9kV4Of A905 60,39
Error in line 40: wN0AxdRx A101 81,67
